test_regress/t/t_dpi_export_bad.out
%Error: t/t_dpi_export_bad.v:10:24: Can't find definition of exported task/function: 'dpix_bad_missing'
   10 |    export "DPI-C" task dpix_bad_missing;
      |                        ^~~~~~~~~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
